# pico-kernel

./: CMakeLists.txt  README.md  memory.x
docs/final/: main.typ
docs/gantt/: gantt.yaml  main.typ
docs/reqs/: main.typ
docs/viabilidad/: main.typ
src/: main.c  rp2040.h
src/boot2/: ram_cpy.S
src/hal/clocks/: clocks.c  clocks.h
src/hal/common/: common.c  common.h
src/hal/io_bank/: io_bank.c  io_bank.h
src/hal/pad_bank/: pad_bank.c  pad_bank.h
src/hal/pll/: pll.c  pll.h
src/hal/reset/: reset.c  reset.h
src/hal/sio/: sio.c  sio.h
src/hal/uart/: uart.c  uart.h
src/hal/xosc/: xosc.c  xosc.h
src/vector-table/: vector_table.S
